feat(favicon): update with new version

--- a/src/index.html
+++ b/src/index.html
@@ -6,15 +6,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="preconnect" href="https://ik.imagekit.io" />
     <link rel="icon" type="image/x-icon" href="favicon.ico" sizes="48x48" />
-    <link rel="icon" href="favicon.png" sizes="any" type="image/svg+xml" />
+    <link rel="icon" href="favicon.svg" sizes="any" type="image/svg+xml" />
     <link rel="apple-touch-icon" href="assets/favicons/apple-touch-icon.png" />
     <link rel="manifest" href="site.webmanifest" />
     <link
       rel="mask-icon"
       href="assets/favicons/safari-pinned-tab.svg"
-      color="#7f7f7f"
+      color="#e5de1fbf"
     />
-    <meta name="theme-color" content="#ffffff" />
+    <meta name="theme-color" content="#e5de1fbf" />
     <link
       rel="apple-touch-icon-precomposed"
       sizes="57x57"
