--- a/src/index.html
+++ b/src/index.html
@@ -5,82 +5,82 @@
     <base href="/" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="preconnect" href="https://ik.imagekit.io" />
-    <link rel="icon" type="image/x-icon" href="favicon.ico" sizes="48x48" />
-    <link rel="icon" href="favicon.svg" sizes="any" type="image/svg+xml" />
-    <link rel="apple-touch-icon" href="assets/favicons/apple-touch-icon.png" />
-    <link rel="manifest" href="site.webmanifest" />
+    <link rel="icon" type="image/x-icon" href="/favicon.ico" sizes="48x48" />
+    <link rel="icon" href="/favicon.svg" sizes="any" type="image/svg+xml" />
+    <link rel="apple-touch-icon" href="/images/favicons/apple-touch-icon.png" />
+    <link rel="manifest" href="/site.webmanifest" />
     <link
       rel="mask-icon"
-      href="assets/favicons/safari-pinned-tab.svg"
+      href="/images/favicons/safari-pinned-tab.svg"
       color="#e5de1fbf"
     />
     <meta name="theme-color" content="#e5de1fbf" />
     <link
       rel="apple-touch-icon-precomposed"
       sizes="57x57"
-      href="assets/favicons/apple-touch-icon-57x57.png"
+      href="/images/favicons/apple-touch-icon-57x57.png"
     />
     <link
       rel="apple-touch-icon-precomposed"
       sizes="114x114"
-      href="assets/favicons/apple-touch-icon-114x114.png"
+      href="/images/favicons/apple-touch-icon-114x114.png"
     />
     <link
       rel="apple-touch-icon-precomposed"
       sizes="72x72"
-      href="assets/favicons/apple-touch-icon-72x72.png"
+      href="/images/favicons/apple-touch-icon-72x72.png"
     />
     <link
       rel="apple-touch-icon-precomposed"
       sizes="144x144"
-      href="assets/favicons/apple-touch-icon-144x144.png"
+      href="/images/favicons/apple-touch-icon-144x144.png"
     />
     <link
       rel="apple-touch-icon-precomposed"
       sizes="60x60"
-      href="assets/favicons/apple-touch-icon-60x60.png"
+      href="/images/favicons/apple-touch-icon-60x60.png"
     />
     <link
       rel="apple-touch-icon-precomposed"
       sizes="120x120"
-      href="assets/favicons/apple-touch-icon-120x120.png"
+      href="/images/favicons/apple-touch-icon-120x120.png"
     />
     <link
       rel="apple-touch-icon-precomposed"
       sizes="76x76"
-      href="assets/favicons/apple-touch-icon-76x76.png"
+      href="/images/favicons/apple-touch-icon-76x76.png"
     />
     <link
       rel="apple-touch-icon-precomposed"
       sizes="152x152"
-      href="assets/favicons/apple-touch-icon-152x152.png"
+      href="/images/favicons/apple-touch-icon-152x152.png"
     />
     <link
-      href="assets/favicons/favicon-196x196.png"
+      href="/images/favicons/favicon-196x196.png"
       rel="icon"
       sizes="196x196"
       type="image/png"
     />
     <link
-      href="assets/favicons/favicon-96x96.png"
+      href="/images/favicons/favicon-96x96.png"
       rel="icon"
       sizes="96x96"
       type="image/png"
     />
     <link
-      href="assets/favicons/favicon-32x32.png"
+      href="/images/favicons/favicon-32x32.png"
       rel="icon"
       sizes="32x32"
       type="image/png"
     />
     <link
-      href="assets/favicons/favicon-16x16.png"
+      href="/images/favicons/favicon-16x16.png"
       rel="icon"
       sizes="16x16"
       type="image/png"
     />
     <link
-      href="assets/favicons/favicon-128x128.png"
+      href="/images/favicons/favicon-128x128.png"
       rel="icon"
       sizes="128x128"
       type="image/png"
@@ -88,7 +88,7 @@
     <meta name="msapplication-TileColor" content="#ffffff" />
     <meta
       name="msapplication-TileImage"
-      content="assets/favicons/mstile-144x144.png"
+      content="/images/favicons/mstile-144x144.png"
     />
   </head>
   <body>
